# miaangine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  launch.json
asset/: level00.txt  level01.txt  level02.txt  map.txt  map01.txt  map02.txt  score.txt
asset/platformer/: map-layout.txt  map-palette.txt  map01.txt
src/: main.cpp
src/bunthebunny/: box.cpp  box.hpp  camera-controller.cpp  camera-controller.hpp  game-manager.cpp  game-manager.hpp  level.cpp  level.hpp  main-menu.cpp  main-menu.hpp  main.cpp  particle.cpp  particle.hpp  player-movement.cpp  player-movement.hpp  player-state.hpp  player.cpp  player.hpp  startmenu.cpp  startmenu.hpp  ui-main.cpp  ui-main.hpp
src/bunthebunny/obstacle/: billboard.cpp  billboard.hpp  enddoor.cpp  enddoor.hpp  obstacle.hpp  spike-up.cpp  spike-up.hpp  spike.cpp  spike.hpp  spring.cpp  spring.hpp  surfplate.cpp  surfplate.hpp
src/bunthebunny/player/: player-movement.cpp  player-movement.hpp  player-state-interface.hpp  player-state.cpp  player-ui.cpp  player-ui.hpp  player-visual.cpp  player-visual.hpp  player.cpp  player.hpp
src/demo/: UI.cpp  bird.cpp  bird.hpp  box.cpp  box.hpp  flappy-bird.cpp  flappy-bird.hpp  game.cpp  main.cpp  pipe-manager.cpp  pipe-manager.hpp  pipe.cpp  pipe.hpp
src/demo/flappy-bird/: UI.cpp  UI.hpp  bird.cpp  bird.hpp  game.cpp  game.hpp  main.cpp  pipe-manager.cpp  pipe.cpp
src/demo/object-test/: block.cpp  block.hpp  game.cpp
src/demo/platformer/: box.cpp  box.hpp  main.cpp
src/game/: box.cpp
src/miaangine/: miaangine-global-constant.hpp  miaangine.hpp
src/miaangine/component/: body.cpp  body.hpp  collider.cpp  collider.hpp  component-interface.hpp  sprite.cpp  sprite.hpp
src/miaangine/core/: camera.cpp  camera.hpp  engine-components.cpp  engine-components.hpp  engine-forward.hpp  engine.cpp  engine.hpp  game-loop.cpp  game-loop.hpp  game-state.cpp  game-state.hpp  generic-task.cpp  generic-task.hpp  renderer.cpp  renderer.hpp  sdl-handle.cpp  sdl-handle.hpp  time-manager.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp  window-manager.cpp  window-manager.hpp  window-util.cpp
src/miaangine/debug/: debug-manager.cpp  debug-manager.hpp  debug.hpp  log-system.cpp  log-system.hpp
src/miaangine/environment/: environment-manager.cpp  environment-manager.hpp  object-container.cpp  object-container.hpp  object-forward.hpp  object.cpp  object.hpp
src/miaangine/event/: event-listener-interface.hpp  event-manager.cpp  event-manager.hpp  event-publisher-interface.hpp  game-loop-event-publisher.cpp  game-loop-event-publisher.hpp  game-loop-event.cpp  game-loop-event.hpp  gameloop-event.cpp  gameloop-event.hpp  regular-event-publisher.cpp  regular-event-publisher.hpp
src/miaangine/graphic/: image-renderer.cpp  image-renderer.hpp  image.cpp  image.hpp  portrait-renderer.cpp  portrait-renderer.hpp  portrait.cpp  portrait.hpp  renderer.cpp  renderer.hpp  sprite-renderer.cpp  sprite-renderer.hpp  tilemap-renderer.cpp  tilemap-renderer.hpp
src/miaangine/include/: UI.hpp  audio.hpp  body.hpp  camera.hpp  clip.hpp  common.hpp  component.hpp  entity.hpp  event-dispatcher.hpp  game.hpp  group.hpp  image.hpp  input.hpp  miaangine.hpp  object.hpp  observer.hpp  physics-world.hpp  physics.hpp  portrait.hpp  renderer.hpp  sprite-handler.hpp  sprite.hpp  text.hpp  tilemap-handler.hpp  tilemap-palette.hpp  tilemap.hpp  time.hpp  transform.hpp  world-object.hpp
(+74 files in other folders)
